[package]
name = "rust_http_parser_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_parser = "*"
dumb_http_parser = "*"
http-box = "*"
thhp = "*"
stream-httparse = "*"
http-pull-parser = "*"
picohttpparser-sys = "*"
libc = "*"
http-bytes = "*"
httparse = "*"
rhymuweb = "*"
saf-httparser = "*"
http-muncher = "*"
milstian-http = "*"
rocket_http = "*"
http_tiny = "*"
# pico = "*"
uhttp_request = "*"
